scroll-snap details+summary pulse

--- a/practice/public/index.html
+++ b/practice/public/index.html
@@ -53,14 +53,19 @@
   <section class="section section1">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      one
+      scroll-snap
     </h2>
   </div>
 
-  <div class="sec1Trial">
-    <div class="sec1El sec1El--1"></div>
-    <div class="sec1El sec1El--2"></div>
-    <div class="sec1El sec1El--3"></div>
+  <div class="snap-container">
+    <div class="red"></div>
+    <div class="blue"></div>
+    <div class="yellow"></div>
+  </div>
+
+  <div class="secNote">
+    <h3>注意事項</h3>
+    <p>特に無し</p>
   </div>
 
 </section>
@@ -68,14 +73,26 @@
   <section class="section section2">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      two
+      details+summary
     </h2>
   </div>
 
   <div class="sec2Trial">
-    <div class="sec2El"></div>
-    <div class="sec2El"></div>
-    <div class="sec2El"></div>
+    <details>
+      <summary>クリック</summary>
+      <div class="summary-wrap">
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+      </div>
+    </details>
+  </div>
+
+  <div class="secNote">
+    <h3>注意事項</h3>
+    <p>ie&edgeで対応なし</p>
+    <p>アニメーション不可</p>
+    <p>パッと表示のときのみ可能</p>
   </div>
 
 </section>
@@ -83,14 +100,20 @@
   <section class="section section3">
   <div class="secTtl">
     <h2 class="secTtl__text">
-      three
+      pulse
     </h2>
   </div>
 
   <div class="sec3Trial">
-    <div class="sec3El"></div>
-    <div class="sec3El"></div>
-    <div class="sec3El"></div>
+    <div class="pulse pulse--1">
+      <a href="javascript:void(0)">pulse single</a>
+    </div>
+    <div class="pulse pulse--2">
+      <a href="javascript:void(0)">pulse double</a>
+    </div>
+    <div class="pulse pulse--3">
+      <a href="javascript:void(0)">pulse infinite</a>
+    </div>
   </div>
 
 </section>
