--- a/practice/public/index.html
+++ b/practice/public/index.html
@@ -118,7 +118,24 @@
 
 </section>
 
-  <section class="section4">
+  <section class="section section4" id="app">
+
+  <div class="cont"></div>
+  <div class="btn" v-on:click="answerOpen">
+    答える
+  </div>
+  <div class="question">
+    <div class="questionCont" v-show="questionCont">
+      {{questionText}}
+    </div>
+    <div class="answerCont" v-show="answerCont">
+      {{ answerText}}
+    </div>
+  </div>
+  <div class="tips">
+    ヒント
+  </div>
+  </div>
 
 </section>
 
@@ -143,6 +160,7 @@
 <footer class="l-footer">
 
 </footer>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script type="text/javascript" src="/assets/js/bundle.js"></script>
 </body>
 
