css plactical creation

--- a/practice/public/index.html
+++ b/practice/public/index.html
@@ -122,7 +122,7 @@
 
   <div class="secTtl">
     <h2 class="secTtl__text">
-      javascript
+      SVG animation
     </h2>
   </div>
 
@@ -165,6 +165,7 @@
 
     </div>
     <button id="wonderlust-btn">SvgAnimation</button>
+    <p id="clickAgain">もう一度クリック！</p>
 
   </div>
 </section>
@@ -173,12 +174,35 @@
 
   <div class="secTtl">
     <h2 class="secTtl__text">
-      vue.js
+      transform-style: preserve-3d<br>
+      backface-visibility: visible;
+
     </h2>
   </div>
 
-  <div class="sec5Trial">
+  <div class="cardWrap">
+    <div class="cardBox">
+      <div class="card facebook">
+        <div class="cardFront">front</div>
+        <div class="cardBack">back</div>
+      </div>
+    </div>
+    <div class="cardBox">
+      <div class="card twitter">
+        <div class="cardFront">front</div>
+        <div class="cardBack">back</div>
+      </div>
+    </div>
+    <div class="cardBox">
+      <div class="card instagram">
+        <div class="instagramBg">
+          <div class="instagramBg__wrap"></div>
+        </div>
 
+        <div class="cardFront">front</div>
+        <div class="cardBack">back</div>
+      </div>
+    </div>
   </div>
 
 </section>
@@ -269,15 +293,110 @@
 
 </section>
 
-  <section class="section10">
+  <section class="section section10">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      clip-path(svgのみ全ブラウザ対応)
+    </h2>
+  </div>
+
+  <div class="cont">
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+    <div class="contCircle"></div>
+  </div>
 
 </section>
 
-  <section class="section11">
+  <section class="section section11">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      spin text
+    </h2>
+  </div>
+
+  <div class="spin">
+
+    <ul class="spinText">
+      <li class="spinText__letter">S</li>
+      <li class="spinText__letter">P</li>
+      <li class="spinText__letter">I</li>
+      <li class="spinText__letter">N</li>
+    </ul>
+  </div>
 
 </section>
 
-  <section class="section12">
+  <section class="section section12">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      skewed-border
+    </h2>
+  </div>
+
+  <div class="container">
+    <div class="wrap">
+      <div class="bg bg--1"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            01
+          </h2>
+          <h3 class="cont__h3">
+            service one
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="wrap">
+      <div class="bg bg--2"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            02
+          </h2>
+          <h3 class="cont__h3">
+            service twe
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+    <div class="wrap">
+      <div class="bg bg--3"></div>
+      <div class="box">
+        <div class="cont">
+          <h2 class="cont__h2">
+            03
+          </h2>
+          <h3 class="cont__h3">
+            service three
+          </h3>
+          <p class="cont__text">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
+            quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
+            saepe culpa.
+          </p>
+          <a href="" class="cont__more">Read More</a>
+        </div>
+
+      </div>
+    </div>
+  </div>
 
 </section>
 
