--- a/practice/public/index.html
+++ b/practice/public/index.html
@@ -41,16 +41,106 @@
 <header class="header">
 
   <div class="headerWrap">
-    <h1 class="headerWrap__Ttl">
+    <h1 class="headerWrap__ttl">
       Review
     </h1>
   </div>
+
+  <nav class="side">
+    <ul class="sideWrap">
+      <li class="sideCont">
+        <a href="#section1" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section2" class="sideLink u-link">
+          <p class="sideText">details+summary</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section3" class="sideLink u-link">
+          <p class="sideText">pulse</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section4" class="sideLink u-link">
+          <p class="sideText">SVG animation</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section5" class="sideLink u-link">
+          <p class="sideText">flip-reverse</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section6" class="sideLink u-link">
+          <p class="sideText">background-clip</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section7" class="sideLink u-link">
+          <p class="sideText">mouse-stalker</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section8" class="sideLink u-link">
+          <p class="sideText">Sass Loop</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section9" class="sideLink u-link">
+          <p class="sideText">date attribute</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section10" class="sideLink u-link">
+          <p class="sideText">clip-path</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section11" class="sideLink u-link">
+          <p class="sideText">spin text</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section12" class="sideLink u-link">
+          <p class="sideText">skewed-border</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section13" class="sideLink u-link">
+          <p class="sideText">glow-neon-button</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section14" class="sideLink u-link">
+          <p class="sideText">scroll-curve</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section15" class="sideLink u-link">
+          <p class="sideText">shadow-text</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section16" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+      <li class="sideCont">
+        <a href="#section17" class="sideLink u-link">
+          <p class="sideText">scroll-snap</p>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
 </header>
 
 <main class="main">
 
-  <section class="section section1">
+  <section class="section section1" id="section1">
   <div class="secTtl">
     <h2 class="secTtl__text">
       scroll-snap
@@ -64,13 +154,12 @@
   </div>
 
   <div class="secNote">
-    <h3>注意事項</h3>
-    <p>特に無し</p>
+    <h3>cssのみで作成</h3>
   </div>
 
 </section>
 
-  <section class="section section2">
+  <section class="section section2" id="section2">
   <div class="secTtl">
     <h2 class="secTtl__text">
       details+summary
@@ -81,23 +170,19 @@
     <details>
       <summary>クリック</summary>
       <div class="summary-wrap">
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
-        Webサイト、モバイルアプリなど、デザインとプロトタイプの作成に必要なすべてが揃っています。アイデアからエクスペリエンスまでを作成できるアプリ。
+        <p class="summary-text">
+          <<注意事項>>
+        </p><br>
+        <p class="summary-text">■ie&edgeで対応なし</p><br>
+        <p class="summary-text">■アニメーション不可</p><br>
+        <p class="summary-text">■現状実用性なしだが、上記3項目を満たせば<br>アコーディオンにjavascript不要</p>
+
       </div>
     </details>
   </div>
-
-  <div class="secNote">
-    <h3>注意事項</h3>
-    <p>ie&edgeで対応なし</p>
-    <p>アニメーション不可</p>
-    <p>パッと表示のときのみ可能</p>
-  </div>
-
 </section>
 
-  <section class="section section3">
+  <section class="section section3" id="section3">
   <div class="secTtl">
     <h2 class="secTtl__text">
       pulse
@@ -118,7 +203,7 @@
 
 </section>
 
-  <section class="section section4">
+  <section class="section section4" id="section4">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
@@ -170,7 +255,7 @@
   </div>
 </section>
 
-  <section class="section section5">
+  <section class="section section5" id="section5">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
@@ -207,7 +292,7 @@
 
 </section>
 
-  <section class="section section6">
+  <section class="section section6" id="section6">
 
   <div class="secTtl">
     <h2 class="secTtl__text">
@@ -232,7 +317,7 @@
 
 </section>
 
-  <section class="section section7">
+  <section class="section section7" id="section7">
   <div class="secTtl">
     <h2 class="secTtl__text">
       mouse-stalker
@@ -247,7 +332,7 @@
 
 </section>
 
-  <section class="section section8">
+  <section class="section section8" id="section8">
   <div class="secTtl">
     <h2 class="secTtl__text">
       Sass Loop
@@ -277,7 +362,7 @@
 
 </section>
 
-  <section class="section section9">
+  <section class="section section9" id="section9">
   <div class="secTtl">
     <h2 class="secTtl__text">
       date attribute
@@ -293,7 +378,7 @@
 
 </section>
 
-  <section class="section section10">
+  <section class="section section10" id="section10">
   <div class="secTtl">
     <h2 class="secTtl__text">
       clip-path(svgのみ全ブラウザ対応)
@@ -309,7 +394,7 @@
 
 </section>
 
-  <section class="section section11">
+  <section class="section section11" id="section11">
   <div class="secTtl">
     <h2 class="secTtl__text">
       spin text
@@ -328,9 +413,9 @@
 
 </section>
 
-  <section class="section section12">
+  <section class="section section12" id="section12">
   <div class="secTtl">
-    <h2 class="secTtl__text">
+    <h2 class="secTtl__text section12__text">
       skewed-border
     </h2>
   </div>
@@ -339,19 +424,19 @@
     <div class="wrap">
       <div class="bg bg--1"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             01
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service one
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
@@ -359,19 +444,19 @@
     <div class="wrap">
       <div class="bg bg--2"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             02
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service twe
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
@@ -379,19 +464,19 @@
     <div class="wrap">
       <div class="bg bg--3"></div>
       <div class="box">
-        <div class="cont">
-          <h2 class="cont__h2">
+        <div class="sec12-cont">
+          <h2 class="sec12-cont__h2">
             03
           </h2>
-          <h3 class="cont__h3">
+          <h3 class="sec12-cont__h3">
             service three
           </h3>
-          <p class="cont__text">
+          <p class="sec12-cont__text">
             Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas blanditiis adipisci aliquid vel sint,
             quisquam doloribus, mollitia quod obcaecati totam illum maxime eum expedita cupiditate quos. Ducimus quas
             saepe culpa.
           </p>
-          <a href="" class="cont__more">Read More</a>
+          <a href="" class="sec12-cont__more">Read More</a>
         </div>
 
       </div>
@@ -400,25 +485,9 @@
 
 </section>
 
-  <section class="section13">
-
-</section>
-
-  <section class="section13">
-
-</section>
-
-  <section class="section13">
-
-</section>
-
-  <section class="section13">
-
-</section>
-
-  <section class="section section17">
+  <section class="section section13" id="section13">
   <div class="secTtl">
-    <h2 class="secTtl__text">
+    <h2 class="secTtl__text textWhite">
       glow-neon-button
     </h2>
   </div>
@@ -445,6 +514,70 @@
       Neon Button
     </a>
   </div>
+</section>
+
+  <section class="section section14" id="section14">
+  <div class="secTtl">
+    <h2 class="secTtl__text section14__text">
+      scroll-curve
+    </h2>
+  </div>
+
+  <div class="curve">
+    <div class="curveRange">
+      <div class="curveWrap">
+        <svg xmlns="http://www.w3.org/2000/svg" class="curveImg" viewBox="0 0 1200 600">
+          <path id="curve" data-name="curve" d="M1587,333c-653.065,1350-1200,0-1200,0Z" transform="translate(-387 -333)"
+            fill="#75deff" />
+        </svg>
+
+      </div>
+    </div>
+  </div>
+
+</section>
+
+  <section class="section section15" id="section15">
+  <div class="secTtl">
+    <h2 class="secTtl__text textWhite">
+      shadow-text
+    </h2>
+  </div>
+
+  <div class="shadow">
+    <h2 class="shadowText">
+      <span class="shadowText__span shadowText__span--1">S</span>
+      <span class="shadowText__span shadowText__span--2">h</span>
+      <span class="shadowText__span shadowText__span--3">a</span>
+      <span class="shadowText__span shadowText__span--4">d</span>
+      <span class="shadowText__span shadowText__span--5">o</span>
+      <span class="shadowText__span shadowText__span--6">w</span>
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section16" id="section16">
+  <div class="secTtl">
+    <h2 class="secTtl__text">
+      fill with water
+    </h2>
+  </div>
+
+  <div class="sec16">
+    <div class="cup">
+
+    </div>
+  </div>
+</section>
+
+  <section class="section section17" id="section17">
+  <div class="secTtl">
+    <h2 class="secTtl__text section17__text">
+
+    </h2>
+  </div>
+
 </section>
 
 </main>
