--- a/practice/public/index.html
+++ b/practice/public/index.html
@@ -571,14 +571,98 @@
   </div>
 </section>
 
-  <section class="section section17" id="section17">
+  <section class="section section17 sec17" id="section17">
   <div class="secTtl">
-    <h2 class="secTtl__text section17__text">
+    <h2 class="secTtl__text sec17__text">
+      type writing
+    </h2>
+  </div>
 
+  <div class="sec17Wrap">
+    <p class="sec17Message">
+
+    </p>
+  </div>
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+  <div class="blackBg">
+    <img src="/assets/img/cheetah.jpg" alt="">
+    <div class="overlay"></div>
+    <div class="range"></div>
+  </div>
+
+</section>
+
+  <!-- <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
     </h2>
   </div>
 
 </section>
+ -->
+  <!-- <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+
+  <section class="section section18 sec18" id="section18">
+  <div class="secTtl">
+    <h2 class="secTtl__text sec18__text">
+      cursor-transparent
+    </h2>
+  </div>
+
+</section>
+ -->
 
 </main>
 
