--- a/web/web/coding/index.html
+++ b/web/web/coding/index.html
@@ -164,11 +164,27 @@
 
 <main class="codingMain">
 
+  <section class="codingWorks">
+
+    <div class="codingWorks__wrap">
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+      <div class="codingWorks__cont">
+      </div>
+    </div>
+
+  </section>
+
 </main>
 <footer class="footer">
 
 </footer>
 <script type="text/javascript" src="/assets/js/bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </body>
 
 </html>
