--- a/web/web/index.html
+++ b/web/web/index.html
@@ -88,6 +88,7 @@
 
 </footer>
 <script type="text/javascript" src="/assets/js/bundle.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 </body>
 
 </html>
