start learning p5.js

--- a/web/web/coding/works/page22.html
+++ b/web/web/coding/works/page22.html
@@ -33,14 +33,12 @@
     <page name="work22" tab="3">
 
       <template slot="mainCont">
-        <div class="canvas-parent" id="canvasParent">
-          <canvas id="canvas"></canvas>
+        <div class="canvas-parent" id="p5Parent">
         </div>
       </template>
 
       <template slot="html">
         &lt;div class="canvas-parent" id="canvasParent"&gt;
-        &lt;canvas id="canvas"&gt;&lt;/canvas&gt;
         &lt;/div&gt;
       </template>
 
@@ -48,12 +46,123 @@
         .canvas-parent {
         width: 100%;
         height: 100%;
+        background-color: skyblue;
         cursor: pointer;
         }
       </template>
 
       <template slot="js">
+        // p5.jsをnode moduleから読み込み
+        const p5 = require('p5');
 
+        //親要素を取得
+        const parent = document.getElementById("p5Parent");
+
+        // 親要素の幅と高さを変数化
+        let cW = parent.clientWidth;
+        let cH = parent.clientHeight;
+
+        // 粒子の数(canvasサイズをもとに数を調整)
+        let quantity = Math.floor(window.innerWidth / 10);
+
+        // 粒子情報の配列
+        let ptcArray = [];
+
+        // ---------------------------------------------------------------------------
+
+        /**
+        * インスタンスモードで記述
+        */
+        const sketch = (p) =&gt; {
+
+        /**
+        * 最初に1回だけ実行される処理
+        */
+        p.setup = () =&gt; {
+
+        // キャンバスを親要素のサイズに合わせて作成
+        let canvas = p.createCanvas(cW, cH);
+
+        //キャンバスにclassを付与
+        canvas.class('p5Canvas');
+
+        // Particle()によって出力された粒子の情報を、配列に格納
+        for (let i = 0; i &lt; quantity; i++) {
+        ptcArray.push(new Particle());
+        }
+
+        } //p.setup()
+
+        // --------------------------------------------------------------------------
+
+        /**
+        * 繰り返し実行される処理
+        */
+        p.draw = () =&gt; {
+
+        // スタイルをリセット
+        p.background('rgb(237, 255, 194)');
+
+        // 粒子をそれぞれ描画
+        ptcArray.forEach(function (el, index) {
+        el.update();
+        el.draw();
+        });
+
+        } // p.draw()
+
+        // --------------------------------------------------------------------------
+
+        /**
+        * クラスの定義
+        */
+        class Particle {
+        constructor() {
+        // 座標
+        this.pos = p.createVector(p.random(p.width), p.random(p.height));
+        // 大きさ
+        this.r = p.random(5, 25);
+        // 速さ
+        this.v = p.createVector(p.random(-2, 2), p.random(-2, 2));
+        }
+
+        // 粒子の移動操作関数
+        update() {
+        this.pos.add(this.v);
+        this.reflection();
+        }
+
+        // 描画関数
+        draw() {
+        // 粒子の色を明るい緑に配色
+        let g = p.random(127, 255);
+        let r = p.random(g);
+        let b = p.random(b);
+        p.fill(r, g, b);
+
+        // 粒子描画
+        p.ellipse(this.pos.x, this.pos.y, this.r, this.r);
+        }
+
+        // 粒子反射関数
+        reflection() {
+        if (this.pos.x &lt; 0 || this.pos.x &gt; p.width) {
+        this.v.x *= -1;
+        }
+        if (this.pos.y &lt; 0 || this.pos.y &gt; p.height) {
+        this.v.y *= -1;
+        }
+        }
+
+        } // class Particle
+
+        } // sketch()
+
+        // --------------------------------------------------------------------------
+
+        // sketch関数実行。第2引数は親要素指定。setup()の中に下記記述でも同義
+        // canvas.parent(parent);
+        new p5(sketch, parent);
       </template>
     </page>
   </main>
@@ -99,15 +208,16 @@
   .canvas-parent {
     width: 100%;
     height: 100%;
+    background-color: rgb(237, 255, 194);
     cursor: pointer;
   }
 
 </style>
 
-<!-- call the common javascript ------------------------------------ -->
-<script type="text/javascript" src="/assets/js/coding/c-page.js"></script>
+<!-- javascript manipulation----------------------------------------- -->
 
-<!------------------------------------------- javascript manipulatio -->
+<!-- call the common javascript -->
+<script type="text/javascript" src="/assets/js/coding/c-page.js"></script>
 
 </body>
 
