all description of 21, 22, 23 are written

--- a/web/web/coding/works/page22.html
+++ b/web/web/coding/works/page22.html
@@ -53,6 +53,8 @@
 
       <template slot="js">
         // p5.jsをnode moduleから読み込み
+        // 今回p5.jsのjsファイルのみ、npm&gulpによりコンパイルしています。コンパイルしない開発環境の場合、
+        // CDNや単一ファイルを読み込んでください。
         const p5 = require('p5');
 
         //親要素を取得
@@ -68,12 +70,12 @@
         // 粒子情報の配列
         let ptcArray = [];
 
-        // ---------------------------------------------------------------------------
-
         /**
         * インスタンスモードで記述
         */
         const sketch = (p) =&gt; {
+
+        // ---------------------------------------------------------------------------
 
         /**
         * 最初に1回だけ実行される処理
@@ -83,7 +85,7 @@
         // キャンバスを親要素のサイズに合わせて作成
         let canvas = p.createCanvas(cW, cH);
 
-        //キャンバスにclassを付与
+        //キャンバスにclassを付与 ※今回は付与しただけ。cssは未設定。無視ください。
         canvas.class('p5Canvas');
 
         // Particle()によって出力された粒子の情報を、配列に格納
@@ -156,9 +158,9 @@
 
         } // class Particle
 
-        } // sketch()
-
         // --------------------------------------------------------------------------
+
+        } // sketch()
 
         // sketch関数実行。第2引数は親要素指定。setup()の中に下記記述でも同義
         // canvas.parent(parent);
