--- a/web/web/coding/works/page23.html
+++ b/web/web/coding/works/page23.html
@@ -52,6 +52,8 @@
 
       <template slot="js">
         // p5.jsをnode moduleから読み込み
+        // 今回p5.jsのjsファイルのみ、npm&gulpによりコンパイルしています。コンパイルしない開発環境の場合、
+        // CDNや単一ファイルを読み込んでください。
         const p5 = require('p5');
 
         //親要素を取得
@@ -67,12 +69,12 @@
         // 粒子情報の配列
         let ptcArray = [];
 
-        // -------------------------------
-
         /**
         * インスタンスモードで記述
         */
         const sketch = (p) =&gt; {
+
+        // ---------------------------------------------------------------------------
 
         /**
         * 最初に1回だけ実行される処理
@@ -81,9 +83,6 @@
 
         // キャンバスを親要素のサイズに合わせて作成
         let canvas = p.createCanvas(cW, cH);
-
-        //キャンバスにclassを付与
-        canvas.class('p5Canvas');
 
         // スタイルを指定
         p.noStroke();
@@ -95,7 +94,7 @@
 
         } //p.setup()
 
-        // ------------------------------
+        // ---------------------------------------------------------------------------
 
         /**
         * 繰り返し実行される処理
@@ -106,14 +105,14 @@
         p.background('#002049');
 
         // 粒子をそれぞれ描画
-        ptcArray.forEach(function (el, index) {
+        ptcArray.forEach(function (el) {
         el.update();
         el.draw();
         });
 
         } // p.draw()
 
-        // ------------------------------
+        // ---------------------------------------------------------------------------
 
         /**
         * クラスの定義
@@ -161,6 +160,7 @@
         // 80より近ければ線で結ぶ
         for (let i = 0; i &lt; ptcArray.length; i++) {
 
+        // パーティクル同士の距離を調べる
         const d = p.dist(this.pos.x, this.pos.y, ptcArray[i].pos.x, ptcArray[i].pos.y)
 
         if (d &lt; 80) {
@@ -173,6 +173,8 @@
         } // connection()
 
         } // class Particle
+
+        // ---------------------------------------------------------------------------
 
         } // sketch()
 
